package people;
import world.City;

public final class Commissioner extends Person {
    public Commissioner(String name, City city) {
        super(name, city);
    }
}
