package skills;

import world.City;

public interface Locatable {
    City getCity();
    void setCity(City city);
}
