package skills;
import cosmicobjects.CosmicObject;

public interface Observer {
    void observe(CosmicObject obj);
}
